force-app/main/default/objects/OutwardFundLineItem__c/OutwardFundLineItem__c.object-meta.xml
<CustomObject>
    <label>Outward Fund Line Item</label>
    <nameField>
        <displayFormat>OFLI-{000000}</displayFormat>
        <label>Fund Line Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outward Fund Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>