force-app/main/default/objects/OutwardFundLineItem__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Outward Funds</relationshipLabel>
    <relationshipName>OutwardFunds</relationshipName>
    <type>Lookup</type>
</CustomField>