force-app/main/default/objects/OutwardFundLineItem__c/fields/AccountHolderName_fm__c.field-meta.xml
<CustomField>
    <fullName>AccountHolderName_fm__c</fullName>
    <formula>AdditionalAccountInfo__r.AccountHolderName__c</formula>
    <label>A/C Holding Name</label>
    <type>Text</type>
</CustomField>