force-app/main/default/objects/OutwardFundLineItem__c/fields/AccountNumber_fm__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber_fm__c</fullName>
    <formula>AdditionalAccountInfo__r.AccountNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A/C Number</label>
    <type>Text</type>
</CustomField>