force-app/main/default/objects/OutwardFundLineItem__c/fields/ActualPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>ActualPaymentDate__c</fullName>
    <label>Actual Payment Date</label>
    <type>Date</type>
</CustomField>