force-app/main/default/objects/OutwardFundLineItem__c/fields/AdditionalAccountInfo__c.field-meta.xml
<CustomField>
    <fullName>AdditionalAccountInfo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Account Info</label>
    <referenceTo>ACC_AdditionalInfo__c</referenceTo>
    <relationshipLabel>Outward Funds</relationshipLabel>
    <relationshipName>OutwardFunds</relationshipName>
    <type>Lookup</type>
</CustomField>