force-app/main/default/objects/OutwardFundLineItem__c/fields/ApprovalStatus_fm__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus_fm__c</fullName>
    <formula>TEXT( OutwardFund__r.ApprovalStatus__c )</formula>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>