force-app/main/default/objects/OutwardFundLineItem__c/fields/BankAccountCurrency__c.field-meta.xml
<CustomField>
    <fullName>BankAccountCurrency__c</fullName>
    <formula>TEXT( AdditionalAccountInfo__r.Currency__c )</formula>
    <label>Bank Account Currency</label>
    <type>Text</type>
</CustomField>