force-app/main/default/objects/OutwardFundLineItem__c/fields/BankName_fm__c.field-meta.xml
<CustomField>
    <fullName>BankName_fm__c</fullName>
    <formula>AdditionalAccountInfo__r.BankName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Name</label>
    <type>Text</type>
</CustomField>