force-app/main/default/objects/OutwardFundLineItem__c/fields/BankTransaction__c.field-meta.xml
<CustomField>
    <fullName>BankTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Transaction Info</label>
    <referenceTo>BankTransaction__c</referenceTo>
    <relationshipLabel>Outward Funds</relationshipLabel>
    <relationshipName>OutwardFunds</relationshipName>
    <type>Lookup</type>
</CustomField>