force-app/main/default/objects/OutwardFundLineItem__c/fields/BranchName_fm__c.field-meta.xml
<CustomField>
    <fullName>BranchName_fm__c</fullName>
    <formula>AdditionalAccountInfo__r.BranchName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Name</label>
    <type>Text</type>
</CustomField>