force-app/main/default/objects/OutwardFundLineItem__c/fields/ClosingInfo__c.field-meta.xml
<CustomField>
    <fullName>ClosingInfo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closing Info</label>
    <referenceTo>SettlementLineItem__c</referenceTo>
    <relationshipLabel>Outward Funds</relationshipLabel>
    <relationshipName>OutwardFunds</relationshipName>
    <type>Lookup</type>
</CustomField>