force-app/main/default/objects/OutwardFundLineItem__c/fields/IBAN_fm__c.field-meta.xml
<CustomField>
    <fullName>IBAN_fm__c</fullName>
    <formula>AdditionalAccountInfo__r.IBAN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IBAN</label>
    <type>Text</type>
</CustomField>