force-app/main/default/objects/OutwardFundLineItem__c/fields/InterBank_fm__c.field-meta.xml
<CustomField>
    <fullName>InterBank_fm__c</fullName>
    <formula>AdditionalAccountInfo__r.InterBank__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intermediary Bank Name</label>
    <type>Text</type>
</CustomField>