force-app/main/default/objects/OutwardFundLineItem__c/fields/InterBankCode_fm__c.field-meta.xml
<CustomField>
    <fullName>InterBankCode_fm__c</fullName>
    <formula>AdditionalAccountInfo__r.InterBankCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intermediary Bank Code</label>
    <type>Text</type>
</CustomField>