force-app/main/default/objects/OutwardFundLineItem__c/fields/IsApproved__c.field-meta.xml
<CustomField>
    <fullName>IsApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Approved?</label>
    <type>Checkbox</type>
</CustomField>