force-app/main/default/objects/OutwardFundLineItem__c/fields/OffOnShore_fm__c.field-meta.xml
<CustomField>
    <fullName>OffOnShore_fm__c</fullName>
    <formula>TEXT(AdditionalAccountInfo__r.OffOnShore__c)</formula>
    <label>Off/On-Shore</label>
    <type>Text</type>
</CustomField>