force-app/main/default/objects/OutwardFundLineItem__c/fields/OutwardFund__c.field-meta.xml
<CustomField>
    <fullName>OutwardFund__c</fullName>
    <label>Outward Fund</label>
    <referenceTo>OutwardFund__c</referenceTo>
    <relationshipLabel>Outward Fund Line Items</relationshipLabel>
    <relationshipName>OutwardFundLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>