force-app/main/default/objects/OutwardFundLineItem__c/fields/PaymentCurrency__c.field-meta.xml
<CustomField>
    <fullName>PaymentCurrency__c</fullName>
    <label>Payment Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_Currency</valueSetName>
    </valueSet>
</CustomField>