force-app/main/default/objects/OutwardFundLineItem__c/fields/PaymentExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>PaymentExchangeRate__c</fullName>
    <label>Payment Exchange Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>