force-app/main/default/objects/OutwardFundLineItem__c/fields/ScheduledPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduledPaymentDate__c</fullName>
    <label>Scheduled Payment Date</label>
    <type>Date</type>
</CustomField>