force-app/main/default/objects/OutwardFundLineItem__c/fields/SettlementCurrency__c.field-meta.xml
<CustomField>
    <fullName>SettlementCurrency__c</fullName>
    <label>Settlement Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_Currency</valueSetName>
    </valueSet>
</CustomField>