force-app/main/default/objects/OutwardFundLineItem__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>송금 가능</fullName>
            </value>
            <value>
                <fullName>송금 승인제출</fullName>
            </value>
            <value>
                <fullName>송금 승인완료</fullName>
            </value>
            <value>
                <fullName>송금 승인반려</fullName>
            </value>
            <value>
                <fullName>송금 완료</fullName>
            </value>
            <value>
                <fullName>송금 보류</fullName>
            </value>
            <value>
                <fullName>송금기한 경과</fullName>
            </value>
            <value>
                <fullName>부분송금(?)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>