force-app/main/default/objects/OutwardFundLineItem__c/fields/SwiftCode_fm__c.field-meta.xml
<CustomField>
    <fullName>SwiftCode_fm__c</fullName>
    <formula>AdditionalAccountInfo__r.SwiftCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Swift Code</label>
    <type>Text</type>
</CustomField>