force-app/main/default/objects/OutwardFundLineItem__c/fields/TransactionAmount__c.field-meta.xml
<CustomField>
    <fullName>TransactionAmount__c</fullName>
    <label>Transaction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>