force-app/main/default/objects/OutwardFundLineItem__c/fields/TransactionCurrency__c.field-meta.xml
<CustomField>
    <fullName>TransactionCurrency__c</fullName>
    <label>Transaction Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_Currency</valueSetName>
    </valueSet>
</CustomField>