force-app/main/default/objects/OutwardFundLineItem__c/fields/TransactionExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>TransactionExchangeRate__c</fullName>
    <label>Transaction Exchange Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>