force-app/main/default/objects/OutwardFundLineItem__c/fields/Usage_fm__c.field-meta.xml
<CustomField>
    <fullName>Usage_fm__c</fullName>
    <formula>TEXT( AdditionalAccountInfo__r.OffOnShore__c )</formula>
    <label>Usage</label>
    <type>Text</type>
</CustomField>