force-app/main/default/objects/OutwardFundLineItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SettlementAmount__c</columns>
    <columns>SettlementCurrency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>